# rubify

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  taplo.toml
src/: lib.rs  main.rs  pen.rs  ttc.rs
src/renderer/: mod.rs  pinyin.rs  romaji.rs  utils.rs
src/ruby/: mod.rs  pinyin.rs
