[package]
name = "rubify"
version = "0.1.0"
description = "Add ruby characters to fonts."
edition = "2024"
license = "MIT"

[features]
default = ["pinyin", "romaji", "woff2"]
pinyin = ["dep:pinyin"]
romaji = ["dep:romaji"]
woff2 = ["dep:woofwoof"]

[dependencies]
facet = "0.41.0"
facet-args = "0.41.0"
fontcull = { version = "2.0", default-features = false }
fontcull-font-types = "0.10"
fontcull-klippa = "0.1"
fontcull-read-fonts = { version = "0.38", features = ["experimental_traverse"] }
fontcull-skrifa = "0.39"
fontcull-write-fonts = "0.44"
glob = "0.3"
indicatif = { version = "0.18.3", features = ["rayon"] }
kurbo = "0.12"
miette = { version = "7.6.0", features = ["fancy"] }
pinyin = { version = "0.11.0", optional = true }
rayon = "1.11.0"
romaji = { version = "0.1.1", optional = true }
rustc-hash = "2.1.1"
tracing = "0.1"
tracing-indicatif = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
woofwoof = { version = "1.0", optional = true }
