[package]
name = "rubify"
version = "0.1.0"
description = "Add ruby characters to fonts."
edition = "2024"
license = "MIT"

[features]
default = ["pinyin", "romaji", "woff2"]
pinyin = ["dep:pinyin"]
romaji = ["dep:wana_kana"]
woff2 = ["dep:woofwoof"]

[dependencies]
anyhow = "1.0"
atomic_float = "1.1.0"
facet = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
figue = { git = "https://github.com/bearcove/figue" }
fontcull = { version = "2.0", default-features = false }
fontcull-font-types = "0.10"
fontcull-klippa = "0.1"
fontcull-read-fonts = { version = "0.38", features = ["experimental_traverse"] }
fontcull-skrifa = "0.39"
fontcull-write-fonts = "0.44"
glob = "0.3.3"
indicatif = { version = "0.18.4", features = ["rayon"] }
kurbo = "0.12"
pinyin = { version = "0.11.0", optional = true }
rayon = "1.11.0"
rustc-hash = "2.1.1"
tracing = "0.1"
tracing-indicatif = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wana_kana = { version = "4.0.0", optional = true }
woofwoof = { version = "1.0", optional = true }
